--- a/animations.css
+++ b/animations.css
@@ -1,4 +1,4 @@
-/* Animations.css */
+/* css animation file */
 @-webkit-keyframes spin {
     0% {
         -webkit-transform: rotateY(0deg);
@@ -13,84 +13,4 @@
         -webkit-transform: rotateX(180deg);
     }
 }
-
-/*
-@-webkit-keyframes logo-color-change {
-    0% {
-        border: solid 2px white;
-    }
-    50% {
-        border: solid 2px goldenrod;
-    }
-    100% {
-        border: solid 2px white;    
-    }
-}
-*/
-
-@-webkit-keyframes name-color {
-    0% {
-        color: white;
-    }
-    25%, 75% {
-        color: goldenrod;
-    }
-    100% {
-        color: white;
-    }
-}
-
-@-webkit-keyframes bar-color {
-    0% {
-        background-color: white;
-    }
-    25%, 75% {
-        background-color: goldenrod;
-    }
-    100% {
-        background-color: white;
-    }
-}
-
-
-
-#links p:hover {
-    color: #FFD34E;
-    text-shadow: 0px 1px 1px black, 0px 2px 1px black, 0px 3px 1px black, 0px 4px 1px black, 0px 5px 1px black, 0px 6px 1px black, 0px 7px 1px black, 0px 8px 1px black, 0px 9px 1px black;
-    
-    -webkit-transform: translate(0px, -5px);
-}
-
-
-
-#we-design:hover,
-#we-develop:hover,
-#we-amaze:hover {
-    background-color: rgba(0,0,0,0.5);
-}
-
-
-@-webkit-keyframes section-out {
-    0% {opacity: 1;}
-    99% {opacity: 0;}
-    100% {opacity: 0; display: none;}
-}
-@-webkit-keyframes section-in {
-    0% {opacity: 0; display: inherit;}
-    100% {opacity: 1;}
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
