--- a/main.css
+++ b/main.css
@@ -1,70 +1,73 @@
-/* Main.css */
-@font-face {
-    src: url(assets/fonts/gogia.otf);
-    font-family: gogia;
-}
-@font-face {
-    src: url(assets/fonts/Anders.ttf);
-    font-family: Anders;
-}
-@font-face {
-    src: url(assets/fonts/Moon.otf);
-    font-family: Moon;
-}
-@font-face {
-    src: url(assets/fonts/Nordic.ttf);
-    font-family: Nordic;
-}
-
+/* main css file */
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
-html,
+html, 
 body {
     width: 100%;
     height: 100%;
 }
-
 body {
-    background-color: #eee;
+    background-color: white;
 }
-#container {
-    width: auto;
-    height: auto;
+header {
+    width: 100%;
+    height: 45%;
+    background: url(images/design.jpg) center bottom fixed;
+    background-size: cover;
+}
+#initials {
+    width: 50px;
+    height: 50px;
+    background-color: #E74C3C;
+    margin: 20px;
+    position: fixed;
+    color: white;
+    font-size: 13pt;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Poiret One";
+    border: solid 2px white;
+    
+    -webkit-transform: rotate(45deg);
+}
+#initials h1 {
+    -webkit-transform: rotate(-45deg);
+}
 
+
+#about {
+    width: 100%;
+    height: auto;
+    background-color: #1E1E20;
+}
+#outer-logo {
+    width: 130px;
+    height: 130px;
+    background-color: #2A2C2B;
+    border: solid 6px #1E1E20;
     left: 0;
     right: 0;
-    bottom: 0;
-    top: 0;
     position: absolute;
     margin: auto;
-    margin: 20px;
-    display: flex;
+    margin-top: -68px;
+    
+    -webkit-transform: rotate(45deg);
 }
-nav {
-    flex: 1;
-    height: 100%;
-    background-color: #1E1E20;
-    margin-right: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
+#logo-container {
+    width: 130px;
+    height: 130px;
+    left: 0;
+    right: 0;
+    position: absolute;
+    margin: auto;
+    
+    -webkit-transform: rotate(-45deg);
 }
-nav #logo-container {
-    width: 100%;
-    height: 140px;
-    position: relative;
 
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    -o-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-
-    perspective: 500px;
-}
 #logo-container .square-container {
-
     position: absolute;
     left: 0;
     right: 0;
@@ -80,376 +83,117 @@ nav #logo-container {
     bottom: 0;
     top: 0;
     margin: auto;
-
+    
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg);
     transform: rotate(45deg);
 }
-
+#text-container {
+    width: 100%;
+    height: 100%;
+    padding-top: 95px;
+    padding-bottom: 30px;
+}
 #company-name {
-    width: 230px;
-    height: 70px;
+    width: 100%;
+    text-align: center;
+    color: white;
+    font-family: "Poiret One";
+    font-size: 3em;
+    margin-bottom: 10px;
+}
+#name {
+    color: #E74C3C;
+} 
+.tiny-bar {
+    width: 150px;
+    height: 2px;
+    background-color: white;
+    left; 0;
+    right: 0;
+    margin: auto;
+    margin-bottom: 5px;
+}
+.short-bar {
+    width: 200px;
+    height: 2px;
+    background-color: white;
     left: 0;
     right: 0;
     margin: auto;
-    cursor: default;
+    margin-bottom: 5px;
 }
-#company-name p {
+.med-bar {
+    width: 250px;
+    height: 2px;
+    background-color: white;
+    left: 0;
+    right: 0;
+    margin: auto;
+    margin-bottom: 5px;
+}
+.long-bar {
+    width: 300px;
+    height: 2px;
+    background-color: white;
+    left: 0;
+    right: 0;
+    margin: auto;
+    margin-bottom: 5px;
+}
+#subheader {
     color: white;
-    font-family: Poiret One;
-    font-size: 2em;
+    font-family: "Poiret One";
+    width: 450px;
+    height: auto;
+    left: 0;
+    right: 0;
+    margin: auto;
+    margin-top: 10px;
     text-align: center;
 }
-.bar-1 {
-    width: 60%;
-    height: 1px;
-    background-color: white;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-.bar-2 {
-    width: 80%;
-    height: 1px;
-    background-color: white;
-    left: 0;
-    right: 0;
-    margin: auto;
-    margin-top: 4px;
-}
-.bar-3 {
-    width: 100%;
-    height: 1px;
-    background-color: white;
-    left: 0;
-    right: 0;
-    margin: auto;
-    margin-top: 4px;
-}
-.bar-4 {
-    width: 100%;
-    height: 1px;
-    background-color: white;
-    left: 0;
-    right: 0;
-    margin: auto;
-    margin-top: 4px;
-}
-.bar-5 {
-    width: 80%;
-    height: 1px;
-    background-color: white;
-    left: 0;
-    right: 0;
-    margin: auto;
-    margin-top: 4px;
-}
-.bar-6 {
-    width: 60%;
-    height: 1px;
-    background-color: white;
-    left: 0;
-    right: 0;
-    margin: auto;
-    margin-top: 4px;
-}
 
 
-#link-container {
-    width: 100%;
-    height: 300px;
-}
-#links {
-    width: 100%;
-    height: 180px;
-}
-#about-link,
-#works-link,
-#contact-link {
-    width: 100%;
-    height: 60px;
-}
-#links p {
-    cursor: pointer;
-    
-    -webkit-transition: all 0.2s ease;
-}
-#about-link {
-    font-size: 1.8em;
-    font-family: "Poiret One";
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#works-link {
-    font-size: 1.8em;
-    font-family: "Poiret One";
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#contact-link {
-    font-size: 1.8em;
-    font-family: "Poiret One";
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
-
-
-#content-container {
-    flex: 4;
-    height: 100%;
-    background-color: #1E1E20;
-    overflow: hidden;
-}
-#about {
+#works {
     width: 100%;
     height: 100%;
-    background: url(assets/images/about-img.jpg) center center;
-    
-    -webkit-transition: all 0.5s ease-in-out;
-}
-#about-top {
-    background-color: red;
-    width: 100%;
-    height: 50%;
-    display: flex;
-}
-#about-bottom {
-    background-color: blue;
-    width: 100%;
-    height: 50%;
-    display: flex;
+    background-color: #2A2C2B;
 }
 
 
 
-/* media queries */
-@media screen and (max-width: 1366px) and (max-height: 768px) {
-    #we-design,
-    #we-develop,
-    #we-amaze {
-        font-size: 2.5em;
-    }
-    #we-design img,
-    #we-develop img,
-    #we-amaze img {
-        width: 100px;
-        height: 100px;
-    }
-}
-
-
-@media screen and (max-width: 1280px) and (max-height: 1024px) {
-    #what-we-do {
-        height: 75%;
-        bottom: 0;
-        position: absolute;
-        margin: auto;
-    }
-    #we-design,
-    #we-develop,
-    #we-amaze {
-        font-size: 2.5em;
-    }
-    #we-design img,
-    #we-develop img,
-    #we-amaze img {
-        width: 100px;
-        height: 100px;
-    }
-}
-
-@media screen and (max-width: 1280px) and (max-height: 800px) {
-    #we-design,
-    #we-develop,
-    #we-amaze {
-        padding-top: 1%;
-    }
-}
-
-
-@media screen and (max-width: 1024px) and (max-height: 768px) {
-    #what-we-do {
-        display: block;
-    }
-    #we-design,
-    #we-develop,
-    #we-amaze {
-        width: 80%;
-        height: 50px;
-        padding: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-        margin-top: 20px;
-        margin-bottom: 20px;
-    }
-    #we-design img,
-    #we-develop img,
-    #we-amaze img {
-        display: none;
-    }
-}
-
-
-@media screen and (max-width: 768px) and (max-height: 1280px) {
-    #container {
-        display: block;
-    }
-    nav {
-        width: 100%;
-        height: 50%;
-        margin-bottom: 20px;
-        padding-top: 30px;
-    }
-    #content-container {
-        width: 100%;
-        height: 50%;
-        margin-bottom: 20px;
-    }
-    #about-top-half {
-        display: block;
-        padding-top: 20px;
-    }
-    #about-us {
-        position: inherit;
-        height: 210px;
-    }
-    #about-bottom-half img {
-        display: none;
-    }
-    #we-design,
-    #we-develop,
-    #we-amaze {
-        font-size: 2em;
-    }
-}
-
-@media screen and (max-width: 640px) and (max-height: 960px) {
-    #about-bottom-half {
-        display: none;
-    }
-}
-
-@media screen and (max-width: 480px) and (max-height: 800px) {
-    nav {
-        padding-top: 0px;
-        height: 51%;
-    }
-    #content-container {
-        height: 62%;
-    }
-}
 
 
 
-/*iPhone 6 plus */
-/* portrait */
-@media screen and (max-width: 414px) and (max-height: 736px) {
-    nav {
-        padding-top: 20px;
-        height: 270px;
-    }
-    nav #logo-container {
-        display: none;
-    }
-    #content-container {
-        height: 510px;
-    }
-}
-/* landscape */
-@media screen and (max-width: 736px) and (max-height: 414px) {
-    #container {
-        display: flex;
-    }
-    nav {
-        flex: 1;
-        height: 100%;
-        padding-top: 60px;
-    }
-    #logo-container {
-        display: none;
-    }
-    
-    #content-container {
-        flex: 4;
-        height: 100%;
-        font-size: 0.9em;
-        text-align: center;
-    }
-    #we-design, 
-    #we-develop,
-    #we-amaze {
-        display: none;
-    }
-}
 
 
-/*iPhone 6 */
-/* portrait */
-@media screen and (max-width: 375px) and (max-height: 667px) {
-    #content-container {
-        height: 580px;
-    }
-}
-/* landscape */
-@media screen and (max-width: 667px) and (max-height: 375px) {
-    #company-name {
-        width: 170px;
-        font-size: 0.7em;
-    }
-    #about-link,
-    #works-link,
-    #contact-link {
-        height: 50px;
-        font-size: 1.5em;
-    }
-    #content-container {
-        font-size: 0.83em;
-    }
-}
 
-/*iPhone 5 */
-/* portrait */
-@media screen and (max-width: 320px) and (max-height: 568px) {
-    #content-container {
-        font-size: 0.8em;
-        height: 450px;
-    }
-}
-/* landscape */
-@media screen and (max-width: 568px) and (max-height: 320px) {
-    nav {
-        padding-top: 35px;
-    }
-    #content-container {
-        font-size: 0.65em;
-    }
-}
 
-/* Nexus 5X 8?
-/* landscape */
-@media screen and (max-width: 732px) and (max-height: 412px) {
-    #content-container {
-        font-size: 0.83em;
-    }
-}
 
-/* Galaxy S5 */
-/* landscape */
-@media screen and (max-width: 640px) and (max-height: 360px) {
-    #content-container {
-        font-size: 0.77em;
-    }
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
