--- a/main.css
+++ b/main.css
@@ -1,365 +1,100 @@
-/* Main.css */
-
-/* ~~~~~~~~~~~~~~~~ Universal Styles ~~~~~~~~~~~~~~~~ */
-@font-face {
-    src: url(fonts/Arkhip_font.ttf);
-    font-family: "Arkhip";
-}
+/* main css file */
 * {
-    padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    padding: 0;
 }
-html, 
+html,
 body {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+}
+body {
+  background-color: #1E1E20;
+  display: flex;
+}
+#container {
+  width: 100%;
+  flex-direction: row;
+
+  margin: 20px;
+  display: flex;
+}
+#left {
+  flex: 1;
+  height: 100%;
+  background-color: #DC3522;
+  float: left;
+  margin-right: 10px;
+}
+#left-top {
+  width: 100%;
+  height: 50%;
+  background: url(images/mountains.jpg) center center;
+  background-size: cover;
+}
+#left-top-overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(32,32,32,0.7);
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#profile {
+  width: auto;
+  height: auto;
+}
+#me {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: url(images/me.jpg) center center;
+  background-size: cover;
+  border: solid 2px white;
+}
+#name {
+  color: white;
+  text-align: center;
+  font-size: 3em;
+  font-family: "Abel";
+}
+#job {
+  color: white;
+  text-align: center;
+  font-size: 1.5em;
+  font-family: "Abel";
 }
 
-/* ~~~~~~~~~~~~~~~~ Navbar Styles ~~~~~~~~~~~~~~~~ */
-nav {
-    width: 100%;
-    height: 60px;
-    position: fixed;
-    z-index: 3;
-    display: flex;
-    align-items: center;
+#right {
+  flex: 1;
+  height: 100%;
+  float: left;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
 }
-nav ul {
-    right: 0;
-    position: absolute;
-    margin: auto;
-    margin-right: 10px;
+#top {
+  flex: 1;
+  background: #2C3E50;
+  margin-bottom: 10px;
 }
-nav ul li {
-    color: white;
-    display: inline;
-    margin-right: 20px;
-    font-size: 1.5em;
-    font-family: "Arkhip";
-    
-    -webkit-transition: all 0.2s ease;
+#bottom {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
 }
-
-/* ~~~~~~~~~~~~~~~~ Header Styles ~~~~~~~~~~~~~~~~ */
-header {
-    width: 100%;
-    height: 100%;
-    background: url(images/mountains.jpg) center center;
-    background-size: cover;
-    position: relative;
-    z-index: 1;
+#bottom-left {
+  flex: 1;
+  background-color: #1D181F;
+  margin-right: 10px;
 }
-#header-overlay {
-    width: 100%;
-    height: 100%;
-    background-color: #1E1E20;
-    opacity: 0.85;
-    position: absolute;
+#bottom-right {
+  flex: 1;
+  background-color: #FF974F;
+  margin-left: 10px;
 }
-header #name {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    font-family: "Arkhip";
-    font-size: 4em;
-    color: white;
-}
-#name span {
-    color: #DC3522;
-}
-#header-mountains {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    display: flex;
-}
-#header-mountains img {
-    bottom: 0;
-    position: absolute;
-    margin: auto;
-}
-
-
-/* ~~~~~~~~~~~~~~~~ About Styles ~~~~~~~~~~~~~~~~ */
-#about {
-    width: 100%;
-    height: auto;
-    background-color: #1E1E20;
-    padding-bottom: 100px;
-}
-#about p {
-    color: white;
-    font-size: 2.3em;
-    width: 60%;
-    font-family: "Arkhip";
-    left: 0;
-    right: 0;
-    margin: auto;
-    text-align: center;
-}
-
-
-
-/* ~~~~~~~~~~~~~~~~ Works Styles ~~~~~~~~~~~~~~~~ */
-#works {
-    width: 100%;
-    height: 130%;
-    background: #DC3522;
-    position: relative;
-}
-#works-title{
-    margin-top: -100px; 
-}
-#works h1 {
-    color: white;
-    text-align: center;
-    font-size: 4.5em;
-    font-family: "Arkhip"; 
-}
-.bar1 {
-    width: 300px;
-    height: 2px;
-    background: white;
-    left: 0;
-    right: 0;
-    margin: auto;
-    margin-bottom: 5px;
-}
-.bar2 {
-    width: 250px;
-    height: 2px;
-    background: white;
-    left: 0;
-    right: 0;
-    margin: auto;
-    margin-bottom: 40px;
-}
-#gallery {
-    width: 70%;
-    height: 50%;
-    background-color: #2A2C2B;
-    left: 0;
-    right: 0;
-    margin: auto;
-    position: relative;
-    border: solid 2px white;
-}
-#img-1 {
-    width: 100%;
-    height: 100%;
-    background: url(images/img-1.jpg) center center;
-    background-size: cover;
-    position: absolute;
-    opacity: 1;
-    z-index: 20;
-    
-    -webkit-transition: all 0.3s ease-in-out;
-}
-#img-2 {
-    width: 100%;
-    height: 100%;
-    background: url(images/img-2.jpg) center center;
-    background-size: cover;
-    position: absolute;
-    opacity: 0;
-    z-index: 1;
-    
-    -webkit-transition: all 0.3s ease-in-out;
-}
-#img-3 {
-    width: 100%;
-    height: 100%;
-    background: url(images/img-3.jpg) center center;
-    background-size: cover;
-    position: absolute;
-    opacity: 0;
-    z-index: 1;
-    
-    -webkit-transition: all 0.3s ease-in-out;
-}
-#img-4 {
-    width: 100%;
-    height: 100%;
-    background: url(images/img-4.jpg) center center;
-    background-size: cover;
-    position: absolute;
-    opacity: 0;
-    z-index: 1;
-    
-    -webkit-transition: all 0.3s ease-in-out;
-}
-
-#buttons {
-    width: 50px;
-    height: 215px;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    position: absolute;
-    margin: auto;
-    z-index: 100;
-    margin-right: 10px;
-}
-#btn-1, 
-#btn-2, 
-#btn-3, 
-#btn-4 {
-    width: 30px;
-    height: 30px;
-    border: solid 2px white;
-    margin: 12px 3px 23px 12px;
-    cursor: pointer;
-    position: relative;
-    
-    -webkit-transform: rotate(45deg);
-}
-#btn-1 .inner {
-    background-color: #DC3522;
-}
-.inner {
-    width: 15px;
-    height: 15px;
-    background: white;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    position: absolute;
-    
-    -webkit-transition: all 0.3s ease-in-out;
-}
-
-
-#works-top {
-    bottom: 0;
-    position: absolute;
-    margin: auto;
-    z-index: 100;
-}
-
-
-
-/* ~~~~~~~~~~~~~~~~ Contact Styles ~~~~~~~~~~~~~~~~ */
-#contact {
-    width: 100%;
-    height: auto;
-    background-color: #1E1E20;
-}
-#contact h1 {
-    color: white;
-    text-align: center;
-    font-size: 4.5em;
-    font-family: "Arkhip"; 
-}
-.bar3 {
-    width: 470px;
-    height: 2px;
-    background: white;
-    left: 0;
-    right: 0;
-    margin: auto;
-    margin-bottom: 5px;
-}
-.bar4 {
-    width: 420px;
-    height: 2px;
-    background: white;
-    left: 0;
-    right: 0;
-    margin: auto;
-    margin-bottom: 30px;
-}
-
-#form-container {
-    width: 400px;
-    height: 350px;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-#email {
-    width: 100%;
-    height: 30px;
-    background-color: #DC3522;
-    border: none;
-    outline: none;
-    margin-bottom: 5px;
-    color: white;
-    padding-left: 5px;
-    font-family: "Arkhip";
-    box-sizing: border-box;
-    
-    -webkit-transition: all 0.1s ease-in-out;
-}
-#subject {
-    width: 100%;
-    height: 30px;
-    background-color: #DC3522;
-    border: none;
-    outline: none;
-    margin-bottom: 5px;
-    color: white;
-    padding-left: 5px;
-    font-family: "Arkhip";
-    box-sizing: border-box;
-    
-    -webkit-transition: all 0.1s ease-in-out;
-}
-#message {
-    width: 100%;
-    background-color: #DC3522;
-    border: none;
-    outline: none;
-    margin-bottom: 5px;
-    color: white;
-    padding-left: 5px;
-    padding-top: 3px;
-    font-family: "Arkhip";
-    box-sizing: border-box;
-    
-    -webkit-transition: all 0.1s ease-in-out;
-}
-::-webkit-input-placeholder {
-   color: rgba(255,255,255,0.7);
-}
-
-:-moz-placeholder { /* Firefox 18- */
-   color: rgba(255,255,255,0.7);  
-}
-
-::-moz-placeholder {  /* Firefox 19+ */
-   color: rgba(255,255,255,0.7);  
-}
-
-:-ms-input-placeholder {  
-   color: rgba(255,255,255,0.7);  
-}
-
-#submit, 
-#reset {
-    width: 60px;
-    height: 30px;
-    border: none;
-    outline: none;
-    background-color: #DC3522;
-    color: white;
-    font-family: "Arkhip";
-    cursor: pointer;
-}
-#submit:hover,
-#reset:hover {
-    color: #FFD34E;
-}
-#reset {
-    float: right;
-}
-
-/* ~~~~~~~~~~~~~~~~ Media Query Styles ~~~~~~~~~~~~~~~~ */
 
 
 
@@ -378,3 +113,18 @@ header #name {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* */
