--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@ body {
 body {
   background-color: #1E1E20;
   display: flex;
+  overflow: hidden;
 }
 #container {
   width: 100%;
@@ -22,20 +23,20 @@ body {
 #left {
   flex: 1;
   height: 100%;
-  background-color: #DC3522;
+  background: url(images/wood1.jpg) center center;
   float: left;
   margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
 }
 #left-top {
-  width: 100%;
-  height: 50%;
-  background: url(images/mountains.jpg) center center;
-  background-size: cover;
+  flex: 4;
 }
 #left-top-overlay {
   width: 100%;
   height: 100%;
-  background-color: rgba(32,32,32,0.7);
+  background-color: rgba(32,32,32,0.8);
   position: relative;
   display: flex;
   justify-content: center;
@@ -44,6 +45,7 @@ body {
 #profile {
   width: auto;
   height: auto;
+  margin: 10px;
 }
 #me {
   width: 200px;
@@ -52,6 +54,9 @@ body {
   background: url(images/me.jpg) center center;
   background-size: cover;
   border: solid 2px white;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 #name {
   color: white;
@@ -62,9 +67,26 @@ body {
 #job {
   color: white;
   text-align: center;
-  font-size: 1.5em;
+  font-size: 1.6em;
   font-family: "Abel";
+  margin-bottom: 5px;
 }
+#email {
+  color: white;
+  text-align: center;
+  font-size: 1.3em;
+  font-family: "Abel";
+  padding-left: 10px;
+}
+#about {
+  font-size: 1.5em;
+  color: white;
+  font-family: "Abel";
+  margin: 30px;
+  padding-left: 10px;
+  border-left: solid 2px white;
+}
+
 
 #right {
   flex: 1;
@@ -76,26 +98,167 @@ body {
 }
 #top {
   flex: 1;
-  background: #2C3E50;
+  /*background-color: #2A2C2B;*/
+  background: url(images/forest3.jpg) center center;
+  background-size: cover;
   margin-bottom: 10px;
+  box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+  cursor: pointer;
+  position: relative;
 }
+#projects-title-container-1 {
+  width: 140px;
+  height: 140px;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  margin: auto;
+  border: solid 2px white;
+  box-sizing: border-box;
+
+  -webkit-transition: all 0.3s ease-in-out;
+
+  -webkit-transform: rotate(45deg);
+}
+#projects-title-container-2 {
+  width: 170px;
+  height: 170px;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  margin: auto;
+  border: solid 2px white;
+  box-sizing: border-box;
+
+  -webkit-transition: all 0.3s ease-in-out 0.05s;
+
+  -webkit-transform: rotate(45deg);
+}
+#projects-title-container-3 {
+  width: 200px;
+  height: 200px;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  margin: auto;
+  border: solid 2px white;
+  box-sizing: border-box;
+
+  -webkit-transition: all 0.3s ease-in-out 0.1s;
+
+  -webkit-transform: rotate(45deg);
+}
+#projects-title {
+  width: 180px;
+  height: 180px;
+  color: white;
+  font-size: 2.4em;
+  font-family: "Abel";
+  padding: 0px 15px 0px 15px;
+  text-align: center;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
 #bottom {
   flex: 1;
   display: flex;
   flex-direction: row;
   margin-top: 10px;
+  /*background-color: #2A2C2B;*/
+  background: url(images/forest.jpg) center center;
+  background-size: cover;
+  box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+  position: relative;
+  cursor: pointer;
 }
-#bottom-left {
-  flex: 1;
-  background-color: #1D181F;
-  margin-right: 10px;
+#blog-title-container-1 {
+  width: 140px;
+  height: 140px;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  margin: auto;
+  border: solid 2px white;
+  box-sizing: border-box;
+
+  -webkit-transition: all 0.3s ease-in-out;
+
+  -webkit-transform: rotate(45deg);
 }
-#bottom-right {
-  flex: 1;
-  background-color: #FF974F;
-  margin-left: 10px;
+#blog-title-container-2 {
+  width: 170px;
+  height: 170px;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  margin: auto;
+  border: solid 2px white;
+  box-sizing: border-box;
+
+  -webkit-transition: all 0.3s ease-in-out 0.05s;
+
+  -webkit-transform: rotate(45deg);
+}
+#blog-title-container-3 {
+  width: 200px;
+  height: 200px;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  margin: auto;
+  border: solid 2px white;
+  box-sizing: border-box;
+
+  -webkit-transition: all 0.3s ease-in-out 0.1s;
+
+  -webkit-transform: rotate(45deg);
+}
+#blog-title {
+  width: 180px;
+  height: 180px;
+  color: white;
+  font-size: 2.4em;
+  font-family: "Abel";
+  padding: 0px 15px 0px 15px;
+  text-align: center;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(32,32,30,0.8);
+}
 
 
 
